--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -109,8 +109,10 @@ nav:
     - 谈读书: thought/For_reading.md
     - 随笔: 
       - 202412: thought/suibi/202412.md
+      - 202501: thought/suibi/202501.md
     - 转载:
       - thought/Trans/shenghuoshensheng.md
+      - thought/Trans/nanfangzhoumoxinnian2025.md
 
   
   
