--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -110,6 +110,7 @@ nav:
     - 随笔: 
       - 202412: thought/suibi/202412.md
       - 202501: thought/suibi/202501.md
+      - 202502: thought/suibi/202502.md
     - 转载:
       - thought/Trans/shenghuoshensheng.md
       - thought/Trans/nanfangzhoumoxinnian2025.md
