--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -111,9 +111,11 @@ nav:
       - 202412: thought/suibi/202412.md
       - 202501: thought/suibi/202501.md
       - 202502: thought/suibi/202502.md
+      - 202503: thought/suibi/202503.md
     - 转载:
       - thought/Trans/shenghuoshensheng.md
       - thought/Trans/nanfangzhoumoxinnian2025.md
-
+#    - 喜欢的歌:
+ #     - thought/fs
   
   
