--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -110,6 +110,7 @@ nav:
       - Contents: Note/Jap/index.md
       - 助词: Note/Jap/Knowledge/zhuci/zhuci.md
       - 形容词: Note/Jap/Knowledge/xingrongci/xingrongci.md
+      - 动词: Note/Jap/Knowledge/dongci/dongci.md
 
   - 一些想法:
     - thought/index.md
