--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -120,6 +120,7 @@ nav:
     - thought/index.md
     - 谈读书: thought/For_reading.md
     - “李叔同杯”观后有感: thought/Lishutong.md
+    - 关于竞赛的记忆: thought/Contest.md
     - 随笔: 
       - 202412: thought/suibi/202412.md
       - 202501: thought/suibi/202501.md
