--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -136,6 +136,8 @@ nav:
     - 转载:
       - thought/Trans/shenghuoshensheng.md
       - thought/Trans/nanfangzhoumoxinnian2025.md
+    - 摘抄:
+      - 优秀的绵羊: thought/zhaichao/yxdmy.md
 #    - 喜欢的歌:
  #     - thought/fs
   
