--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -120,6 +120,11 @@ nav:
       - 助词: Note/Jap/Knowledge/zhuci/zhuci.md
       - 形容词: Note/Jap/Knowledge/xingrongci/xingrongci.md
       - 动词: Note/Jap/Knowledge/dongci/dongci.md
+    - Refold语言习得路线归纳:
+      - 阶段0:Refold哲学:
+        - 0A:方法: Note/Refold/0/0A.md
+        - 0B:心态: Note/Refold/0/0B.md
+        - 0C:核心活动: Note/Refold/0/0C.md
 
   - 一些想法:
     - thought/index.md
