--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -150,6 +150,7 @@ nav:
       - 202504: thought/suibi/202504.md
       - 202505: thought/suibi/202505.md
       - 202506: thought/suibi/202506.md
+      - 20250708总结: thought/suibi/20250708总结.md
     - 转载:
       - thought/Trans/shenghuoshensheng.md
       - thought/Trans/nanfangzhoumoxinnian2025.md
