--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -142,6 +142,7 @@ nav:
     - 关于竞赛的记忆: thought/Contest.md
     - 目前的困惑(2025/05/27): thought/Confusion.md
     - 对计算机学科的一些看法: thought/AboutCS.md
+    - 四月は君の噓: thought/shigatsuwakiminouso.md
     - 随笔: 
       - 202412: thought/suibi/202412.md
       - 202501: thought/suibi/202501.md
