--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -157,6 +157,7 @@ nav:
       - thought/Trans/nanfangzhoumoxinnian2025.md
     - 摘抄:
       - 优秀的绵羊: thought/zhaichao/yxdmy.md
+      - 四月是你的谎言: thought/zhaichao/sihuang.md
 #    - 喜欢的歌:
  #     - thought/fs
   
