--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -111,7 +111,9 @@ nav:
     - 命令行艺术: tech/minglinghang/minglinghangyishu-zh.md
   - 学习笔记:
     - Note/index.md
-    - 我自己的CS学习路线: Note/Self_CS_Learning_Route.md
+    - 我自己的CS学习路线: 
+      - MIT 6.092:Introduction To Programming In Java: Note/Classthought/Self_CS_Learning_Route.md
+      - UMich EECS 498-007 / 598-005:Deep Learning for Computer Vision: Note/Classthought/cv.md
     - 人工智能: 
       - 强化学习: Note/Artificial/Reinforcement/R1.md
     - Discrete Mathematics and Probability Theory:
