--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -114,6 +114,7 @@ nav:
     - 我自己的CS学习路线: 
       - MIT 6.092:Introduction To Programming In Java: Note/Classthought/Self_CS_Learning_Route.md
       - UMich EECS 498-007 / 598-005:Deep Learning for Computer Vision: Note/Classthought/cv.md
+      - CS61A:Structure and Interpretation of Computer Programs: Note/Classthought/UCBCS61A.md
     - 人工智能: 
       - 强化学习: Note/Artificial/Reinforcement/R1.md
     - Discrete Mathematics and Probability Theory:
