--- a/ALZnote/mkdocs.yml
+++ b/ALZnote/mkdocs.yml
@@ -115,8 +115,7 @@ nav:
       - MIT 6.092:Introduction To Programming In Java: Note/Classthought/Self_CS_Learning_Route.md
       - UMich EECS 498-007 / 598-005:Deep Learning for Computer Vision: Note/Classthought/cv.md
       - CS61A:Structure and Interpretation of Computer Programs: Note/Classthought/UCBCS61A.md
-    - 人工智能: 
-      - 强化学习: Note/Artificial/Reinforcement/R1.md
+      - SJTU AI2615算法设计与分析: Note/Classthought/SJTUAI2615.md
     - Discrete Mathematics and Probability Theory:
       - Propositional Logic: Note/Discrete Mathematics and Probability Theory/Propositional_Logic.md
     - 日语学习中的一些归纳:
